Desktop/Ame Digital/Doc Components/smartsolutionteam-doc-ame-miniapp-components-836d7199813f/website/versioned_docs/version-2.1.1/ameIcon.md
---
id: version-2.1.1-ameIcon
title: AmeIcon
sidebar_label: 5.4 AmeIcon
original_id: ameIcon
---

Componente que exibe um Ícone.

## Exemplo

![ameicon](assets/old_versions/ameicon.png)

## Utilização

```xml
<AmeIcon icon={'ame-outline'}/>
```

## Propriedades

### Icon

Nome do ícone a ser renderizado. Segue abaixo a lista de ícones:

- adress-outline
- adress-solid
- agenda-outline
- agenda-solid
- alert-outline
- alert-solid
- ame-banking
- ame-outline
- ame-solid
- attach
- bank-outline
- bank-solid
- bar-code
- barbecue-outline
- barbecue-solid
- bell-notification-outline
- bell-notification-solid
- bestcb
- bus-outline
- bus-solid
- calendar-outline
- calendar-solid
- camera-outline
- camera-solid
- card-ame-outline
- card-ame-solid
- cart-outline
- cart-solid
- cashback
- chat-mail-outline
- chat-mail-solid
- chat-message-outline
- chat-message-solid
- chat-sms-outline
- chat-sms-solid
- chat-whatsapp-outline
- chat-whatsapp-solid
- cinema-outline
- cinema-solid
- clock-outline
- clock-solid
- close
- clothing-tshirt-outline
- clothing-tshirt-solid
- colapse
- configuration-outline
- configuration-solid
- conversion
- copy-outline
- copy-solid
- credit-card-ame
- credit-card-outline
- credit-card-solid
- cupom-outline
- cupom-solid
- curiosities-outline
- curiosities-solid
- dashboard-outline
- dashboard-solid
- delivery-outline
- delivery-solid
- deposit-outline
- deposit-solid
- deslike-no-outline
- deslike-no-solid
- details
- diarista-outline
- diarista-solid
- divide
- documents-cpf
- documents-id-outline
- documents-id-solid
- donation-art
- donation-autonomous
- donation-communities
- donation-coronavirus
- donation-environement
- donation-fomezero
- donation-girlpower
- donation-healthcare
- donation-kids
- donation-planet
- donation-rainbow
- donation-sambarj
- donation-sambasalvador
- donation-sambasp
- donation-seniors
- donations-education
- donations
- down
- edit-outline
- edit-solid
- electrician
- emprestimo-loan-outline
- emprestimo-loan-solid
- emprestimopj-loan
- ensure
- equal
- events-outline
- events-solid
- expand
- extended-warranty
- extrato-outline
- extrato-solid
- eye-hide
- eye-show
- faces-happy-outline
- faces-happy-solid
- faces-normal-outline
- faces-normal-solid
- faces-sad-outline
- faces-sad-solid
- fav-outline
- fav-solid
- feature-bazar-outline
- feature-bazar-solid
- feature-news
- feature-scanandgo
- feature-shell-box
- feature-taggy
- feature-voucher-future
- feedback-error
- feedback-success
- filter-outline
- filter-solid
- flash-active
- flash-disabled
- food-convenience
- games-outline
- games-solid
- general-services-outline
- general-services-solid
- gift-card-outline
- gift-card-solid
- gift-outline
- gift-solid
- gym-outline
- gym-solid
- hand-easy
- hands
- health-outline
- health-solid
- help-outline
- help-solid
- home-outline
- home-solid
- house
- image-album-outline
- image-album-solid
- image-outline
- image-solid
- insurances
- Interface
- investments
- keyboard-numbers-outline
- keyboard-numbers-solid
- lamp-outline
- lamp-solid
- lazer-recreation-outline
- lazer-recreation-solid
- left-previous
- like-ok-outline
- like-ok-solid
- list-items-outline
- list-items-solid
- loan-consignado
- location-outline
- location-solid
- logo-autentic
- map-outline
- map-solid
- market-bag-outline
- market-bag-solid
- mini-games
- mirror-beuty-outline
- mirror-beuty-solid
- mobile-chip
- mobile-outline
- mobile-solid
- money-balance
- money-card-outline
- money-card-solid
- money-outline
- money-solid
- montador-outline
- montador-solid
- movimentar-extrato-statement
- multiply
- new-card-segunda-via
- newness-outline
- newness-solid
- padlock-lock-outline
- padlock-lock-solid
- padlock-open-outline
- padlock-open-solid
- parking-outline
- parking-solid
- pet-m-outline
- pet-m-solid
- pet-p-outline
- pet-p-solid
- pet-xl-outline
- pet-xl-solid
- pets-outline
- pets-solid
- phone-outline
- phone-solid
- plumber-outline
- plumber-solid
- poup-pig
- pricing-outline
- pricing-solid
- profile-outline
- profile-solid
- qrcode
- receipt-outline
- receipt-solid
- recieve
- restaurant-outline
- restaurant-solid
- right-next
- scissor-cut-outline
- scissor-cut-solid
- search
- selfie-outline
- selfie-solid
- send-money
- send-outline
- send-solid
- serralheiro-outline
- serralheiro-solid
- services-outline
- services-solid
- share-outline
- share-solid
- store-outline
- store-solid
- subtract
- sum
- taxes
- tech-outline
- tech-solid
- tecnico-Informatica-outline
- tecnico-Informatica-solid
- thief
- ticket-outline
- ticket-solid
- tickets-outline
- tickets-solid
- tools-outline
- tools-solid
- transactions-outline
- transactions-solid
- transfer-outline
- transfer-solid
- transport-card
- transports
- trash-outline
- trash-solid
- trip-plane
- turn-camera-outline
- turn-camera-solid
- up
- valueqr
- wallet-outline
- wallet-solid
- withdraw-retirar-outline
- withdraw-retirar-solid
- work-outline
- work-solid
